--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/MrG.Daemon.Admin/.vs/
-/MrG.Daemon.Admin/bin/
-/MrG.Daemon.Admin/obj/
+/.vs/
+/bin/
+/obj/
